fixed the issue where the clock table is not correctly center-aligned in IE
git-svn-id: https://svn.kuali.org/repos/kpme/trunk@1052 6c5f4195-72ea-6250-e7e4-e498f552a5df

--- a/src/main/webapp/css/tk.css
+++ b/src/main/webapp/css/tk.css
@@ -246,6 +246,9 @@ select {
 }
 
 #clock{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 #clock table {
@@ -277,8 +280,8 @@ select {
 #clock .footer {
 }
 
-#clock tr, td {
-	border: 1px solid gray;
+#clock table td {
+	border-bottom: 1px solid gray;
 	padding: 8px;
 }
 
